travis retry with new aws app

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,11 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: "eu-central-1"
-  app: "docker-react"
-  env: "Docker-env"
+  app: "docker-react-1"
+  env: "Dockerreact1-env"
   bucket_name: "elasticbeanstalk-eu-central-1-793564225149"
-  bucket_path: "docker-react"
+  bucket_path: "docker-react-1"
   on:
     branch: master
   access_key_id: "$AWS_ACCESS_KEY"
   secret_access_key: "$AWS_SECRET_KEY"
-
